--- a/EDA.nb.html
+++ b/EDA.nb.html
@@ -615,7 +615,7 @@ $(document).ready(function () {
 <!-- code folding -->
 <script>
 $(document).ready(function () {
-  window.initializeSourceEmbed("EDA_V.Rmd");
+  window.initializeSourceEmbed("EDA.Rmd");
   window.initializeCodeFolding("show" === "show");
 });
 </script>
